# SJOS

./: .gitignore  CMakeLists.txt  TODO.md  bochs.sh  bochs.sh~  bochsout.txt  bochsrc  bochsrc~  bx_enh_dbg.ini  clean.sh  config.sh  iso.sh  qemu.sh  qemu.sh~
kernel/: .gitignore  Makefile  Makefile~
kernel/arch/i386/: ata_pio.c  ata_pio.c~  boot.S~  gdt.c  gdt.c~  gdt_asm.asm  gdt_asm.asm~  idt.c  idt.c~  idt_asm.asm  idt_asm.asm~  irq.c  irq.c~  irq_asm.asm  irq_asm.asm~  isr.c  isr.c~  isr_asm.asm  isr_asm.asm~  linker.ld  make.config  make.config~  memory.c  paging.c  paging_asm.asm  pci.c  portio.asm  portio.asm~  tty.c~  user_mode.c  user_mode.c~  user_mode_asm.asm  user_mode_asm.asm~
kernel/include/kernel/: acpi.h  ata_pio.h  ata_pio.h~  dma.h  gdt.h  gdt.h~  idt.h  idt.h~  irq.h  irq.h~  isr.h~  memory.h  multiboot.h  paging.h  pci.h  pit.h  portio.h  portio.h~  tty.h  tty.h~  user_mode.h
kernel/kernel/: acpi.c  ata_pio.c  dma.c  kernel.c  kernel.c~  pci.c  pit.c  tty.c
libc/: Makefile
libc/include/: stdio.h
libc/include/sys/: cdefs.h
libc/stdio/: printf.c  printf.c~  putchar.c  puts.c
libc/stdlib/: abort.c  abort.c~
